--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ kramdown:
 #disqus_username: _your_disqus_short_name_
 
 # intensedebate settings
-intensedebate_comments: true
+intensedebate_comments: false
 
 # livere
 livere_comments: true
@@ -58,7 +58,7 @@ livere_comments: true
 # Duoshuo settings
 duoshuo_username: huxblog
 # Share component is depend on Comment so we can NOT use share only.
-duoshuo_share: true                     # set to false if you want to use Comment without Sharing
+duoshuo_share: false                     # set to false if you want to use Comment without Sharing
 
 
 
