--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ ga_domain: jacksoncode.github.io
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "写写代码，做做设计，看看产品。世界那么大，多玩玩看看。"
+sidebar-about-description: "写写代码，读读书，看看产品。世界那么大，多玩玩看看。"
 sidebar-avatar: /img/avatar-hux.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
@@ -88,8 +88,8 @@ featured-condition-size: 1              # A tag will be featured if the size of 
 # Friends
 friends: [
     {
-        title: "Hux Blog",
-        href: "http://huangxuan.me"
+        title: "Jackson Blog",
+        href: "https://jacksoncode.github.io"
     },{
         title: "Foo",
         href: "#"
