--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ ga_domain: jacksoncode.github.io
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "写写代码，读读书，看看产品。世界那么大，多玩玩看看。"
-sidebar-avatar: /img/avatar-hux.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/linkin.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
