feat: 全面优化博客并新增量化交易指南
代码优化:
- CDN链接升级为HTTPS
- 删除废弃的多说/Disqus评论代码
- 清理无效favicon链接和示例friends
- 清理footer无效链接
- 清理about.html恶搞内容
- 添加sitemap.xml和robots.txt
- 启用RSS feed

新增内容:
- 新增量化交易入门指南博客（约2500字）

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ baseurl: "/blog"         # for example, '/blog' if your blog hosted on 'host/blo
 
 
 # SNS settings
-RSS: false
+RSS: true
 weibo_username:     firfunner
 zhihu_username:     firfunner
 github_username:    JacksonCode
@@ -90,17 +90,5 @@ friends: [
     {
         title: "Jackson Blog",
         href: "https://jacksoncode.github.io"
-    },{
-        title: "Foo",
-        href: "#"
-    },{
-        title: "Bar",
-        href: "#"
-    },{
-        title: "Example Friends",
-        href: "#"
-    },{
-        title: "It helps SEO",
-        href: "#"
     }
 ]
